--- a/src/LD46/LD46.csproj
+++ b/src/LD46/LD46.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.8.0.13" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Floppy\src\Floppy\Floppy.csproj" />
+  </ItemGroup>
+
 </Project>
