Added tile rendering.

--- a/src/LD46/LD46.csproj
+++ b/src/LD46/LD46.csproj
@@ -21,4 +21,14 @@
     <ProjectReference Include="..\Floppy\src\Floppy\Floppy.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Content\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <MonoGameContentReference Include="..\..\res\Content.mgcb" Link="Content\Content.mgcb">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </MonoGameContentReference>
+  </ItemGroup>
+
 </Project>
